--- a/website/classification.html
+++ b/website/classification.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <!-- <link rel="icon" href="../../../../favicon.ico"> -->
 
-    <title>Food Recalls Around the World <title>
+    <title>Food Recalls Around the world</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/dashboard/">
 
