--- a/website/category.html
+++ b/website/category.html
@@ -21,7 +21,7 @@
 
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Food Recall Analysis</a>
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">FDA Food Recall Analysis</a>
       <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
       <ul class="navbar-nav px-3">
         
