--- a/website/state.html
+++ b/website/state.html
@@ -47,7 +47,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="category.html">
-                  <span data-feather="layers"></span>
+                  <span data-feather="alert-triangle"></span>
                   Recalls by Category
                 </a>
               </li>
